[package]
name = "check-lockfile-intersection"
description = "Tool for checking if the intersection of two Cargo.lock files have the same package versions"
keywords = ["cargo", "lockfile", "version"]
version = "0.1.0"
edition = "2021"
authors = ["Graydon Hoare <graydon@pobox.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cargo-lock = "11"
attohttpc = "0"
petgraph = "0"
url = "2"
xflags = "0"
