[package]
name = "check-lockfile-intersection"
description = "Tool for checking if the intersection of two Cargo.lock files have the same package versions"
keywords = ["cargo", "lockfile", "version"]
version = "0.1.0"
edition = "2021"
authors = ["Graydon Hoare <graydon@pobox.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cargo-lock = { version = "11", default-features = false }
attohttpc = { version = "0", default-features = false, features = ["tls-native"] }
petgraph = { version = "0", default-features = false }
url = { version = "2", default-features = false }
xflags = { version = "0", default-features = false }
